fix the overflow behaviour (kind of) - firefox still shows overflow, but visually everything is ok

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body > div {
-    height: 100vh
+    min-height: 100vh
 }
 
 #title-slide {
